Change font color to contrasts in bg

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -49,11 +49,11 @@
   <!-- Header -->
   <header class="masthead d-flex">
     <div class="container text-center my-auto">
-      <h1 class="mb-1" style="color: aliceblue;">Corrupção e Pobreza - Visualização de dados</h1>
+      <h1 class="mb-1">Corrupção e Pobreza - Visualização de dados</h1>
       <h3 class="mb-5">
-        <em style="color: aliceblue;">Gráficos para visualização dessa relação</em>
+        <em >Gráficos para visualização dessa relação</em>
       </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Veja agora!</a>
+      <!-- <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Veja agora!</a> -->
     </div>
     <div class="overlay"></div>
   </header>
@@ -74,8 +74,8 @@
   <!-- Callout -->
   <section class="callout">
     <div class="container text-center">
-      <h2 class="mx-auto mb-5">Dados Gini Index/CPI 
-        <em>interativos </em>
+      <h2 class="mx-auto mb-5" style="color: aliceblue;">Dados Gini Index/CPI 
+        <em style="color: aliceblue;">interativos </em>
         com mapa.</h2>
     </div>
   </section>
