--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -49,7 +49,7 @@
   <!-- Header -->
   <header class="masthead d-flex">
     <div class="container text-center my-auto">
-      <h1 class="mb-1">Corrupção e Pobreza - Visualização de dados</h1>
+      <h1 class="mb-1">Corrupção e Pobreza</h1>
       <h3 class="mb-5">
         <em >Gráficos para visualização dessa relação</em>
       </h3>
