--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,10 +38,13 @@
         <a class="js-scroll-trigger" href="#page-top">Home</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#about">Gráficos Gini Index/CPI</a>
+        <a class="js-scroll-trigger" href="#services">Contextualização</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#contact">Mapa interativo Gini Index/CPI</a>
+        <a class="js-scroll-trigger" href="#about">Mapa interativo Gini Index/CPI</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger" href="#contact">Gráficos Gini Index/CPI</a>
       </li>
     </ul>
   </nav>
@@ -51,20 +54,43 @@
     <div class="container text-center my-auto">
       <h1 class="mb-1">Corrupção e Pobreza</h1>
       <h3 class="mb-5">
-        <em >Gráficos para visualização dessa relação</em>
+        <em>Gráficos para visualização dessa relação</em>
       </h3>
       <!-- <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Veja agora!</a> -->
     </div>
     <div class="overlay"></div>
   </header>
 
+    <!-- Services -->
+    <section class="content-section bg-primary text-white text-center" id="services">
+      <div class="container">
+        <div class="content-section-heading">
+          <!-- <h3 class="text-secondary mb-0">Services</h3> -->
+          <h2 class="mb-5">Problemática</h2>
+        </div>
+        <div class="row">
+          <h4 class="mb-5">
+            <em>O projeto é baseado nos dados do portal Transparency International juntamente com os dados do The World Bank - Data Catalog. O objetivo é analisar visualmente a corrupção e a evolução da pobreza e seus aspectos por país.
+            </em>
+          </h4>
+
+        </div>
+      </div>
+    </section>
+  
+
   <!-- About -->
-  <section class="content-section bg-light" id="about">
+  <section class="content-section bg-light text-center" id="about">
     <div class="container text-center">
         <div class="content-section-heading text-center">
-        
-          <h2 class="mb-5">Gráficos Gini Index/CPI</h2>
-          <div class='tableauPlaceholder' id='viz1617550306712' style='position: relative'><noscript><a href='#'><img alt='Comparacao dos indices ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Tr&#47;TrabalhoFinal-Painel2&#47;Comparacaodosindices&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='TrabalhoFinal-Painel2&#47;Comparacaodosindices' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Tr&#47;TrabalhoFinal-Painel2&#47;Comparacaodosindices&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='pt' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1617550306712');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='1127px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='1127px';} else { vizElement.style.width='100%';vizElement.style.height='1127px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+          <!-- <div class="row"> -->
+            <h2 class="mb-5">
+              <em>
+                Mapa interativo Gini Index/CPI
+              </em>
+            </h2>
+          <!-- </div> -->
+          <div class='tableauPlaceholder' id='viz1617550524100' style='position: relative'><noscript><a href='#'><img alt='Corrupcao vs Pobreza ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Tr&#47;TrabalhoFinal_16174058556550&#47;CorrupcaovsPobreza&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='views&#47;TrabalhoFinal_16174058556550&#47;CorrupcaovsPobreza?:language=pt&amp;:embed=y&amp;:display_count=y&amp;publish=yes' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Tr&#47;TrabalhoFinal_16174058556550&#47;CorrupcaovsPobreza&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='pt' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1617550524100');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1100px';vizElement.style.height='1827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1100px';vizElement.style.height='1827px';} else { vizElement.style.width='100%';vizElement.style.height='1227px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
         </div>
     </div>
   </section>
@@ -74,44 +100,40 @@
   <!-- Callout -->
   <section class="callout">
     <div class="container text-center">
-      <h2 class="mx-auto mb-5" style="color: aliceblue;">Dados Gini Index/CPI 
-        <em style="color: aliceblue;">interativos </em>
-        com mapa.</h2>
+      <div class="content-section-heading text-center">
+        <!-- <div class="row"> -->
+          <h2 class="mx-auto mb-5" style="color: aliceblue;">
+            <em>Dados Gini Index/CPI   </em>
+          </h2>
+      </div>
+      
+        <!-- <em style="color: aliceblue;">interativos </em>
+        com mapa.</h2> -->
     </div>
   </section>
 
-
-  <!-- Call to Action -->
-
-
-  <!-- Map -->
+  <!-- Map
   <div id="contact" class="map">
+    <div class="container text-center"> -->
+  <section class="content-section bg-light text-center" id="contact">
     <div class="container text-center">
-    <div class='tableauPlaceholder' id='viz1617550524100' style='position: relative'><noscript><a href='#'><img alt='Corrupcao vs Pobreza ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Tr&#47;TrabalhoFinal_16174058556550&#47;CorrupcaovsPobreza&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='views&#47;TrabalhoFinal_16174058556550&#47;CorrupcaovsPobreza?:language=pt&amp;:embed=y&amp;:display_count=y&amp;publish=yes' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Tr&#47;TrabalhoFinal_16174058556550&#47;CorrupcaovsPobreza&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='pt' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1617550524100');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1100px';vizElement.style.height='1827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1100px';vizElement.style.height='1827px';} else { vizElement.style.width='100%';vizElement.style.height='1227px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-    </div>  
-  </div>
+      <div class="content-section-heading text-center">
+      <!-- <h2 class="mb-5">Gráficos Gini Index/CPI</h2> -->
+        <h2 class="mb-5">
+          <em>
+            Gráficos Gini Index/CPI
+          </em>
+        </h2>
+        <div class='tableauPlaceholder' id='viz1617550306712' style='position: relative'><noscript><a href='#'><img alt='Comparacao dos indices ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Tr&#47;TrabalhoFinal-Painel2&#47;Comparacaodosindices&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='TrabalhoFinal-Painel2&#47;Comparacaodosindices' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Tr&#47;TrabalhoFinal-Painel2&#47;Comparacaodosindices&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='pt' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1617550306712');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='1127px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='1127px';} else { vizElement.style.width='100%';vizElement.style.height='1127px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+      </div>  
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer class="footer text-center">
     <div class="container">
-      <ul class="list-inline mb-5">
-        <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#!">
-            <i class="icon-social-facebook"></i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#!">
-            <i class="icon-social-twitter"></i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="#!">
-            <i class="icon-social-github"></i>
-          </a>
-        </li>
-      </ul>
-      <p class="text-muted small mb-0">Copyright &copy; Your Website 2020</p>
+      <!-- <p class="text-muted small mb-0">Copyright &copy; Your Website 2020</p> -->
+      <p class="text-muted small mb-0">Trabalho Final de Visualização de Dados - DMV</p>
     </div>
   </footer>
 
