--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -129,6 +129,24 @@
     </div>
   </section>
 
+  <!-- Conclusão -->
+  <section class="content-section bg-secondary text-white text-center" id="conslusão">
+    <div class="container">
+      <div class="content-section-heading">
+        <!-- <h3 class="text-secondary mb-0">Services</h3> -->
+        <h2 class="mb-5">Conclusão</h2>
+      </div>
+      <div class="row">
+        <h4 class="mb-5">
+          <em>
+            Com o que foi demonstrado, é possível perceber que quanto maior o Gini Index (índice de desigualdade) menor o seu CPI Score (índice de corrupção), podendo associar assim a corrupção como uma das possíveis maiores causas da desigualdade e miséria mundialmente.
+          </em>
+        </h4>
+
+      </div>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="footer text-center">
     <div class="container">
