--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -70,7 +70,12 @@
         </div>
         <div class="row">
           <h4 class="mb-5">
-            <em>O projeto é baseado nos dados do portal Transparency International juntamente com os dados do The World Bank - Data Catalog. O objetivo é analisar visualmente a corrupção e a evolução da pobreza e seus aspectos por país.
+            <em>
+              Sabe-se que a desigualdade social é um dos problemas mais recorrentes e persistentes em grande parte do mundo. E que a corrupção também se faz presente no cotidiano e na cultura do mundo capitalista. <br/><br/>
+              A corrupção, por sua definição, se acusa como uma das principais responsáveis pela existência da pobreza, já que seria o favorecimento em benefício de uma entidade em detrimento de outra, o que já se caracteriza como uma relação desbalanceada.<br/><br/>
+            </em>
+            <em>
+              O projeto é baseado nos dados do portal Transparency International juntamente com os dados do The World Bank - Data Catalog. O objetivo é analisar visualmente a corrupção e a evolução da pobreza e seus aspectos por país.
             </em>
           </h4>
 
